# ChangeLog for media-libs/libpng
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.413 2013/07/22 11:51:02 ssuominen Exp $

*libpng-1.5.17 (22 Jul 2013)

  22 Jul 2013; Samuli Suominen <ssuominen@gentoo.org> +libpng-1.5.17.ebuild:
  Version bump.

  20 Jul 2013; Samuli Suominen <ssuominen@gentoo.org> -libpng-1.5.15-r15.ebuild,
  -libpng-1.6.2.ebuild, -libpng-1.6.2-r1.ebuild,
  -files/libpng-1.6.2-noexecstack.patch:
  old

*libpng-1.6.3-r1 (20 Jul 2013)
*libpng-1.6.3 (20 Jul 2013)

  20 Jul 2013; Samuli Suominen <ssuominen@gentoo.org> +libpng-1.6.3.ebuild,
  +libpng-1.6.3-r1.ebuild:
  Version bump; -r0 without multilib conversion.

*libpng-1.6.2-r1 (23 Jun 2013)

  23 Jun 2013; Samuli Suominen <ssuominen@gentoo.org> +libpng-1.6.2-r1.ebuild:
  Initial multilib support wrt #474356 by Pacho Ramos

  09 Jun 2013; Mike Frysinger <vapier@gentoo.org> metadata.xml:
  Add upstream CPE tag (security info) from ChromiumOS.

*libpng-1.5.16 (04 Jun 2013)

  04 Jun 2013; Samuli Suominen <ssuominen@gentoo.org> +libpng-1.5.16.ebuild:
  Version bump.

  03 May 2013; Samuli Suominen <ssuominen@gentoo.org> libpng-1.6.2.ebuild:
  Use prune_libtool_files --all instead of custom find now that it's capable of
  removing dead symlinks too wrt #436996

  01 May 2013; Agostino Sarubbo <ago@gentoo.org> libpng-1.5.15.ebuild:
  Stable for sh, wrt bug #462314

  27 Apr 2013; Samuli Suominen <ssuominen@gentoo.org> -libpng-1.5.14.ebuild,
  -libpng-1.6.1.ebuild, -libpng-1.6.1-r1.ebuild,
  -files/libpng-1.6.1-Corrected-length-written-to-uncompressed-iT.patch,
  -files/libpng-1.6.1-Fixed-previous-bugfix-to-work-on-64-bit-pla.patch,
  -files/libpng-1.6.1-Removed-extra-recently-inserted-line-from-p.patch:
  old

*libpng-1.6.2 (26 Apr 2013)

  26 Apr 2013; Samuli Suominen <ssuominen@gentoo.org> +libpng-1.6.2.ebuild,
  +files/libpng-1.6.2-noexecstack.patch:
  Version bump.
