@@ -17,18 +17,14 @@ EBUILD libpng-1.5.13-r1.ebuild 1376 SHA256 3b529b117f6f8d5d3e91d30b3c1cb7a87c0f2
 EBUILD libpng-1.5.15.ebuild 1408 SHA256 4d9296bdd55075dbe861d1a82c154439d93ee2b78674ccce9c6a1279f836bf76 SHA512 ac4c6331f39ad2e27258235b7afda0404ef70d2d94d0f3aeec07c6437c62de2eec98c8e1fe5f4d5f6870c4afc7f7e7621d511999536d1f2ffdb778016a21f6cf WHIRLPOOL 654c9cf1e6e23911309cad192125312700e9a5a0d8ae013d57933a8ddfb392c06ce0be070bf3cc36cf728cce5aaa6ad768a71fe68bd29b1b632e50c9ca395690
 EBUILD libpng-1.5.16.ebuild 1516 SHA256 82dbc12682543fa9ec21ac005c3d2eb7727e806148b270598e9004b4158c10e9 SHA512 d5215ff7c5b83a0ac060ed1a310a65745bd75d6e2b434a5be614a1f1abd4af8021efd76d39806a2dde80bf13ff2b3388d830b69d1ccdc5412f9c12c538ce2d5b WHIRLPOOL b5fe4cbb81b1b7d9a9d85479b108f5a990b23430deefd365d2a95dc27f70a26f8b1043999e7dea59ab21e00e6c34092f3cc610a100d05b42845bd2da0906b9f4
 EBUILD libpng-1.5.17.ebuild 1509 SHA256 7cf872dc88bad9015d4ccd7570929c456e9ecb61e48679756eef2632450517dd SHA512 7e82c45faf8a83f7e0c3917c50175b558da49c351accbbc4c03d880c1638f99cf26546d704c600d57eeb564f884f6151ccd7a8f9bd15ef0f064029287258d11c WHIRLPOOL 41d914ce26d9db2df12cfd1b3763cb8b23dd2bed1f0199b89ab5213036fbedd7ed65c352aedb6e5e28631d12e6b37340b4a3c8b5a82e3f102398f6a4f12138fe
-EBUILD libpng-1.6.3-r1.ebuild 1508 SHA256 a9f7dcca5513c70b59129b7867b28f0fcee7480a331b90eb3176f4fe85ed245d SHA512 9d7e25e8a83cc826ae8c66d399f00ee40c359348a6511902eeae27dc571adbd660dc0bd454bda4766d940eac5b32325ac6bd69f7fe7289a72c0771d07596837c WHIRLPOOL bef8c6cf6a7aeb96746e01619937c62b65cea7cea8cbdc1181583a38c30fcb4424d8b88a74301a9f6be405f4ad37e42bb3f90acac0939eed542f18c9f130cee8
+EBUILD libpng-1.6.3-r1.ebuild 1516 SHA256 e324f5a513b43559168ee29272c88eb25be3a86b2480ec77e918c0c3237ef7b7 SHA512 b26bddb82c0c7b752314bc985a853b6ea20ae226e03559f97274618b60618819e15c6e9dd7b8c002c2eef8ff9ac717f08c6facd133272b6a7298d1f313073e0f WHIRLPOOL c3784e6c7f5c2d5a3c5459b7c9b6c4852b097265fc9d0b6c26e1dfbb853aeecd8281b72063bfbd44a949d7f682c39f47abfc47f5a1cea43dbd02e9003a22c968
 EBUILD libpng-1.6.3.ebuild 1335 SHA256 075c9ccabef448fa7af6ce57028d48d41f63dbaa9b9e9f1bd5c52e8d6ba197d2 SHA512 4a8e3e7283d00625651354601498361ad7fc854343c5a9834e51b4abaab2662613344a4c91d77fc4de33f30598c3f3ee1894cd9005016de27391ce0ff3520670 WHIRLPOOL aa9b6d4ea4750ad76bfec2dd0274f4767c143d4869b1b6d2827e963cf2a4e9d9462c1807d4db8b421acaaa85436a97b88623d2affa640e940579385daadb1bb9
-MISC ChangeLog 55102 SHA256 be66e84f574be07e7114e01eaa9e192127997776a5382f4c4669b2b7f6d266d2 SHA512 2b8d6e04afec916323d3b2fbb06d6e35b95666b2207f19b7c625972189da74cbe8d739278dd182d66f115119e2ad3c7665207763ea2bf5bc052e54976ad37c31 WHIRLPOOL 33c321ed255ecd27c7561e2b3a74c1edcdf3c40175b96dd4ba61bfa26014df071a1e882ec4ec222e10971f33bde5f289ad2843620a0bd689b8a314ac381fc4bd
+MISC ChangeLog 55330 SHA256 cb9bbe564529fa2967ae0564f589b6e8b47e6176e53e42d61ece31cb9044abc6 SHA512 245425c3855d2758415d709a74a8c6188902bae29fc8665823e3e179a16caf872537f97e16f3dd408544266fb0f8640e349e5e6c2787fe22494e47826669931c WHIRLPOOL dad45b1dbe2e085d31a834dbd42803567ac77322e35374c0769407171462467dfd1ee4495631c7fd84095ff6bd93c80dbb70bfafb36e85264cddd924886213c5
 MISC metadata.xml 326 SHA256 b3ff7fa84cb973407915b046ba95aeb5e5fec97707b56978093a16885922d6d7 SHA512 61db558547cea5a5bdf4b89326d76b12aad12eab60bb26dce3fdc7360842f761e692855046bebed9d2e63b5823a11ac34bef0f5721f48046323ced30841cd72f WHIRLPOOL ab8a546352be7956e990d777bbe8e20429fa2eeabb1a8e9766bce982f5f0bbe4730a57dde96880d97837021bfd8e5a09cfa54e898c01c31a24b02bd0c2526666
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJR7RyBAAoJEEdUh39IaPFNgnsH/371+gVFEiWh9JXleIxUbWXN
-AuHDDRc1wYOHRUEPIPIdgMX2KYFJSfbFoXOLQEcP6CiocpuOodLRtHM51qERRe0k
-6QC/PxH/mLJ7nW2H4JsbdL4QV9HDtPprdb0Juk9ccuNvwNZnEo74Z+s4KD/CPFZA
-+riJFqzUAjqTORxOlIk9mCBfeHQN4P+NWKdaHvQYjd5VFMndwGjfRd/tU38ti1xB
-aIvEdKSZ9N67QcaWPSFq3MtBl6jazeOMPl4J0qBw1y7/xq01TlC2ccPBX6FiZNdr
-XqH297KweCo/sNSVYm8mV5EaN/qyH4+uYndor7eIOFxprEjL/IDGbZTItP4HZ7w=
-=CJyR
+iEYEAREIAAYFAlH4OTYACgkQvFcC4BYPU0p0HACfYJFW4pWeuSU3kjQaCnkXjqoI
+vigAn326GbL0qn0+mZctCRcIVUnI2Lvf
+=lnzQ
 -----END PGP SIGNATURE-----
