@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libpng
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.413 2013/07/22 11:51:02 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.414 2013/07/30 22:07:48 aballier Exp $
+
+  30 Jul 2013; Alexis Ballier <aballier@gentoo.org> libpng-1.6.3-r1.ebuild:
+  Fix MULTILIB_USEDEP on zlib, make emul-libs blockers so that it is slatted
+  for baselibs -r2, remove multilib_src_install which is just the default.
 
 *libpng-1.5.17 (22 Jul 2013)
 
